testsuite/tests/dependent/should_compile/Dep1.hs
{-# LANGUAGE PolyKinds, DataKinds #-}

module Dep1 where

data Proxy k (a :: k) = P

x :: Proxy * Int
x = P

y :: Proxy Bool True
y = P


