testsuite/tests/dependent/should_fail/DepFail1.hs
{-# LANGUAGE PolyKinds #-}

module DepFail1 where

data Proxy k (a :: k) = P

z :: Proxy Bool
z = P
